# drofir

./: .embed.toml  Cargo.toml
.cargo/: config.toml
src/: main.rs
