[package]
edition = "2021"
name = "drofir"
version = "0.1.0"
license = "MIT"

[dependencies]
panic-rtt-target = { version = "0.2.0" }
embedded-hal = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtt-target = { version = "0.6.1" }
systick-monotonic = "1.0.0"
mpu6050 = "0.1.6"

[dependencies.rtic]
git = "https://github.com/rtic-rs/rtic"
rev = "v2.1.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
git = "https://github.com/rtic-rs/rtic-monotonics"
rev = "v2.0.3"
features = ["cortex-m-systick"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]


[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false
panic = "abort"


[profile.release]
opt-level = "s"
codegen-units = 1
debug = true
lto = true
panic = "abort"
